# Computer-Architecture

./: .gitignore  CMakeLists.txt  README.md  compile_project1.sh
Project1/: input.txt  instruction_cycle.c  instruction_cycle.h  main.c  output.txt  register.h
Project1/_docs/: 32224560 차호현, Project 1 Report.docx
Project1/docs/: 32224560 차호현, Project 1 Report.docx  ~$224560 차호현, Project 1 Report.docx  ~WRL0003.tmp
Project2/: README.md  main.c  output.txt
Project2/_docs/: MIPS Single Cycle Microprocessor Implementation Report.docx  note.txt  pptF014.pptm  -  자동 복구됨.pptm  ~$PS Single Cycle Microprocessor Implementation Report.docx
Project2/component/: register.h  register_impl.c
Project2/component/alu/: alu.c  alu.h
Project2/component/control_unit/: control_unit.c  control_unit.h
Project2/component/memory/: memory.c  memory.h
Project2/component/miscelenous/: path_variable.h  sign_extender.c
Project2/component/register/: register.h  register_impl.c
Project2/single_cycle/decode/: decode_instruction.c  decode_instruction.h
Project2/single_cycle/execute/: execute_instruction.h
Project2/single_cycle/fetch/: fetch_instruction.c  fetch_instruction.h
Project2/single_cycle/writeback/: write_back_instruction.h
Project2/test_prog/: simple3.mips.asm
Project2/util/: utils.c  utils.h
Project2_ver2/: main.c
Project3/: main.c
Project3/Project3 - 2-Bit & 1-Bit prediction/: main.c
Project3/Project3 - 2-Bit & 1-Bit prediction/component/last_branch_prediction/: last_branch_predictor.c  last_branch_predictor.h
Project3/Project3 - 2-Bit & 1-Bit prediction/component/latch/: latch.h
Project3/Project3 - 2-Bit & 1-Bit prediction/single_cycle/fetch/: fetch_instruction.c
Project3/Project3 - static (always not branch)/: CMakeLists.txt  main.c
Project3/Project3 - static (always not branch)/component/latch/: latch.h
Project3/Project3 - static (always not branch)/single_cycle/decode/: decode_pipe.c
Project3/Project3 - static (always not branch)/single_cycle/execute/: execute_instruction.c  execute_instruction.h
Project3/Project3 - static (always not branch)/single_cycle/fetch/: fetch_instruction.c  fetch_instruction.h
Project3/Project3 - static (always not branch)/single_cycle/memory_access/: memory_access.c
Project3/component/Latch/: latch.c  latch.h
Project3/component/alu/: alu.c
Project3/component/miscelenous/: opcodes.h  path_variable.h
Project3/docs/: MIPS Pipeline Microprocessor Implementation Report.docx  ~$PS Pipeline Microprocessor Implementation Report.docx
Project3/single_cycle/decode/: decode_instruction.c
Project3/single_cycle/fetch/: fetch_instruction.c
Project3/single_cycle/writeback/: write_back_instruction.c
Project4/: main.c  output.txt
Project4/_docs/results/CACHELINE128_STORE16KB/direct_mapped_cache/: fib_edtied_DIRECT_MAPPED_CACHE_CACHELINE128_STORE16KB.txt  gcd_DIRECT_MAPPED_CACHE_CACHELINE128_STORE16KB.txt  input4_DIRECT_MAPPED_CACHE_CACHELINE16KB_STORE16KB
Project4/_docs/results/CACHELINE128_STORE16KB/fully_associated_cache/: fib_FULLY_ASSOCIATED_CACHELINE128_STORE16KB.txt  fib_edtied_FULLY_ASSOCIATED_CACHELINE128_STORE16KB.txt  input4_FULLY_ASSOCIATED_CACHELINE128_STORE16KB.txt  simple2_FULLY_ASSOCIATED_CACHELINE128_STORE16KB.txt  simple3_FULLY_ASSOCIATED_CACHELINE128_STORE16KB.txt  simple4_FULLY_ASSOCIATED_CACHELINE128_STORE16KB.txt  simple_FULLY_ASSOCIATED_CACHELINE128_STORE16KB.txt
Project4/component/alu/: alu.c  alu.h
Project4/component/cache/: cache_memory.c  cache_memory.h  history_buffer.c  history_buffer.h
Project4/component/control_unit/: control_unit.h
Project4/component/miscelenous/: multiplexer_impl.c
Project4/component/register/: register.h
Project4/single_cycle/decode/: decode_instruction.c
Project4/single_cycle/execute/: execute_instruction.c
Project4/single_cycle/fetch/: fetch_instruction.c  fetch_instruction.h
scripts/: compile_project1.sh  compile_project2.sh  install_cmake.sh
